include/coquic/ffi/core.h

typedef struct coquic_result coquic_result_t;
typedef uint64_t coquic_time_us_t;
typedef uint8_t coquic_status_t;
typedef uint8_t coquic_local_error_code_t;
typedef uint8_t coquic_effect_kind_t;
typedef struct coquic_optional_connection_handle {
    uint8_t has_value;
    coquic_connection_handle_t value;
} coquic_optional_connection_handle_t;
typedef struct coquic_optional_stream_id {
    uint8_t has_value;
    coquic_stream_id_t value;
} coquic_optional_stream_id_t;
typedef struct coquic_optional_time_us {
    uint8_t has_value;
    coquic_time_us_t value;
} coquic_optional_time_us_t;
typedef struct coquic_local_error {
    coquic_optional_connection_handle_t connection;
    coquic_local_error_code_t code;
    coquic_optional_stream_id_t stream_id;
} coquic_local_error_t;
typedef struct coquic_send_datagram_effect {
    coquic_connection_handle_t connection;
    coquic_optional_route_handle_t route_handle;
    coquic_bytes_view_t bytes;
    coquic_ecn_codepoint_t ecn;
    uint8_t is_pmtu_probe;
} coquic_send_datagram_effect_t;
typedef struct coquic_receive_stream_data_effect {
    coquic_connection_handle_t connection;
    coquic_stream_id_t stream_id;
    uint64_t offset;
    coquic_bytes_view_t bytes;
    uint8_t fin;
    coquic_optional_u64_t final_size;
} coquic_receive_stream_data_effect_t;
typedef struct coquic_receive_datagram_data_effect {
    coquic_connection_handle_t connection;
    coquic_bytes_view_t bytes;
} coquic_receive_datagram_data_effect_t;
typedef struct coquic_peer_reset_stream_effect {
    coquic_connection_handle_t connection;
    coquic_stream_id_t stream_id;
    uint64_t application_error_code;
    uint64_t final_size;
} coquic_peer_reset_stream_effect_t;
typedef struct coquic_peer_stop_sending_effect {
    coquic_connection_handle_t connection;
    coquic_stream_id_t stream_id;
    uint64_t application_error_code;
} coquic_peer_stop_sending_effect_t;
typedef struct coquic_state_event_effect {
    coquic_connection_handle_t connection;
    coquic_state_change_t change;
} coquic_state_event_effect_t;
typedef struct coquic_connection_lifecycle_event_effect {
    coquic_connection_handle_t connection;
    coquic_lifecycle_t event;
} coquic_connection_lifecycle_event_effect_t;
typedef struct coquic_peer_preferred_address_available_effect {
    coquic_connection_handle_t connection;
    coquic_preferred_address_t preferred_address;
} coquic_peer_preferred_address_available_effect_t;
typedef struct coquic_resumption_state_available_effect {
    coquic_connection_handle_t connection;
    coquic_bytes_view_t serialized;
} coquic_resumption_state_available_effect_t;
typedef struct coquic_zero_rtt_status_event_effect {
    coquic_connection_handle_t connection;
    coquic_zero_rtt_status_t status;
} coquic_zero_rtt_status_event_effect_t;
typedef struct coquic_packet_inspection_effect {
    coquic_connection_handle_t connection;
    coquic_packet_inspection_direction_t direction;
    coquic_packet_inspection_packet_type_t packet_type;
    uint64_t datagram_id;
    size_t datagram_length;
    size_t datagram_offset;
    size_t packet_length;
    uint32_t version;
    coquic_bytes_view_t destination_connection_id;
    coquic_bytes_view_t source_connection_id;
    coquic_bytes_view_t token;
    uint8_t spin_bit;
    uint8_t key_phase;
    uint8_t packet_number_length;
    uint64_t packet_number;
    coquic_bytes_view_t encrypted_packet;
    coquic_bytes_view_t plaintext_payload;
} coquic_packet_inspection_effect_t;
typedef struct coquic_new_token_available_effect {
    coquic_connection_handle_t connection;
    coquic_bytes_view_t token;
} coquic_new_token_available_effect_t;
typedef struct coquic_effect {
    coquic_effect_kind_t kind;
    union {
        coquic_send_datagram_effect_t send_datagram;
        coquic_receive_stream_data_effect_t receive_stream_data;
        coquic_receive_datagram_data_effect_t receive_datagram_data;
        coquic_peer_reset_stream_effect_t peer_reset_stream;
        coquic_peer_stop_sending_effect_t peer_stop_sending;
        coquic_state_event_effect_t state_event;
        coquic_connection_lifecycle_event_effect_t connection_lifecycle_event;
        coquic_peer_preferred_address_available_effect_t peer_preferred_address_available;
        coquic_resumption_state_available_effect_t resumption_state_available;
        coquic_zero_rtt_status_event_effect_t zero_rtt_status_event;
        coquic_packet_inspection_effect_t packet_inspection;
        coquic_new_token_available_effect_t new_token_available;
    } as;
} coquic_effect_t;
COQUIC_FFI_API void coquic_result_destroy(coquic_result_t *result);
COQUIC_FFI_API size_t coquic_result_effect_count(const coquic_result_t *result);
COQUIC_FFI_API coquic_status_t coquic_result_effect_at(const coquic_result_t *result, size_t index,
                                                       coquic_effect_t *out_effect);
COQUIC_FFI_API coquic_optional_time_us_t coquic_result_next_wakeup(const coquic_result_t *result);
COQUIC_FFI_API uint8_t coquic_result_has_local_error(const coquic_result_t *result);
COQUIC_FFI_API coquic_status_t coquic_result_local_error(const coquic_result_t *result,
                                                         coquic_local_error_t *out_error);
COQUIC_FFI_API uint8_t coquic_result_send_continuation_pending(const coquic_result_t *result);