bindings/python/coquic/_ffi.py


    lib.coquic_result_destroy.argtypes = [result]
    lib.coquic_result_destroy.restype = None
    lib.coquic_result_effect_count.argtypes = [result]
    lib.coquic_result_effect_count.restype = C.c_size_t
    lib.coquic_result_effect_at.argtypes = [
        result,
        C.c_size_t,
        C.POINTER(coquic_effect_t),
    ]
    lib.coquic_result_effect_at.restype = C.c_uint8
    lib.coquic_result_next_wakeup.argtypes = [result]
    lib.coquic_result_next_wakeup.restype = coquic_optional_time_us_t
    lib.coquic_result_has_local_error.argtypes = [result]
    lib.coquic_result_has_local_error.restype = C.c_uint8
    lib.coquic_result_local_error.argtypes = [result, C.POINTER(coquic_local_error_t)]
    lib.coquic_result_local_error.restype = C.c_uint8
    lib.coquic_result_send_continuation_pending.argtypes = [result]
    lib.coquic_result_send_continuation_pending.restype = C.c_uint8
